--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Anime Portfolio</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="4/w3.css">
+<link rel="stylesheet" href="style.css">
 <body>
 
 <!-- Header -->
